@@ -22,6 +22,8 @@ PHP                                                                        NEWS
 - Fixed memory leak in stream_is_local(). (Felipe, Tony)
 - Fixed BC break in mime_content_type(), removes the content encoding. (Scott) 
 
+- Fixed bug #49306 (inside pdo_mysql default socket settings are ignored).
+  (Ilia)
 - Fixed bug #49289 (bcmath module doesn't compile with phpize configure).
   (Jani)
 - Fixed bug #49269 (Ternary operator fails on Iterator object when used inside
